Fix up the column spacing on the Resident Manager screen

--- a/WebUI/Keebee.AAT.Administrator/Content/Site.css
+++ b/WebUI/Keebee.AAT.Administrator/Content/Site.css
@@ -435,13 +435,13 @@ input[type="checkbox"] {
     text-align: center;
 }
 .col-firstname {
-    width: 25%;
+    width: 19%;
 }
 .col-lastname {
-    width: 20%;
+    width: 19%;
 }
 .col-id {
-    width: 5%;
+    width: 7%;
 }
 .col-gender {
     width: 8%;
@@ -452,7 +452,7 @@ input[type="checkbox"] {
     text-align: center;
 }
 .col-date {
-    width: 10%;
+    width: 15%;
     text-align: center;
 }
 .col-profile-picture {
